# metrics

./: ModelMire3DSLAM.json  README.md  calib_data.py  calibrate_pyramid_to_optitrack.py  camera_model_loader.py  config.py  demo.py  main.py  notch_detector.py  note  ots_angle_estimator.py  paths.py  point_cloud_metrics.py  pyproject.toml  pyramid_calibration.py  pyramid_manager.py  pyramid_transformer.py  test_metrics.py  usage_examples.py  utils.py  visualize_rb.py
